--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,28 @@
     <title>TV-Shows</title>
   </head>
   <body>
+    <header>
+      <div class="container flex-spaced">
+        <div class="logo">logo</div>
+        <div id="comment-section"></div>
+
+        <div class="titles flex-spaced" id="tv-shows">
+          <div class="tv-show ptr">
+            <u> <p></p></u>
+          </div>
+          <div class="tv-show ptr" id="movies">
+            <p>movies</p>
+          </div>
+          <div class="tv-show ptr" id="movies">
+            <p>TV-Series</p>
+          </div>
+        </div>
+      </div>
+      </div>
+    </header>
     <main>
       <h1>TV-Shows</h1>
     </main>
+    <footer></footer>
   </body>
 </html>
