--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,8 @@
     <main>
       <h1>TV-Shows</h1>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="content">Created by Kaleb Bekele and Naledi</div>
+    </footer>
   </body>
 </html>
