Add list items to the home page

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
       </div>
     </header>
     <main>
-      <h1>TV-Shows</h1>
+      <div class="cards" id="card"></div>
     </main>
     <footer>
       <div class="content">Created by Kaleb Bekele and Naledi</div>
