--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             <p>TV-Series</p>
           </div>
         </div>
-      </div>
+      </div> 
+      <div id="all-likes"></div>
+      <div id="all-comments"></div>
       </div>
     </header>
     <main>
